done with the site

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <!--Navigations länkar-->
 
         <div class="__nav-links">
-          <a class="__active" href="#">Home</a>
+          <a class="__active" href="index.html">Home</a>
           <a href="#">Categories</a>
           <a href="#">Products</a>
-          <a href="#">Contacts</a>
+          <a href="contact.html">Contacts</a>
         </div>
         
         <!-- Ikon länkar -->
